--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "appwrite": "^22.0.0",
     "dexie": "^4.3.0",
     "framer-motion": "^12.31.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
